Kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: my-service
spec:
  selector:
    app.kubernetes.io/name: MyApp
  ports:
    - protocol: TCP
      port: 80
      targetPort: 9376

apiVersion: v1
kind: Service
metadata:
  name: example-service
spec:
  selector:
    app: example
  ports:
    - port: 8765
      targetPort: 9376
  type: LoadBalancer      

apiVersion: v1
kind: Service
metadata:
  name: example-nodeport-service
spec:
  selector:
    app: example
  ports:
    - port: 80
      targetPort: 9376
      nodePort: 30007
  type: NodePort

apiVersion: v1
kind: Service
metadata:
  name: example-clusterip-service
spec:
  selector:
    app: example
  ports:
    - port: 80
      targetPort: 9376
  type: ClusterIP
